Jul 08, 2025
  biological regions are no longer loaded as genes -- they are loaded as separated entities (object_key=25)

Feb 28, 2025
  genes: added loading of EnsemblRapid xrefs

May 21, 2024
  transcripts: fixed loading of utrs

Apr 15, 2024
  genes: added species 'black rat'

Mar 15, 2024
  genes: new bonobo assembly NHGRI_mPanPan1-v2.0_pri

Mar 01, 2024
  genes: new rat assembly GRCr8
  eUtils: increased maximum nr of genes to be processed from 100,000 to 1,000,000
          to avoid problems with not processing all of the genes

Feb 20, 2024
  logic: no longer inactive genes are excluded from weekly processing

Dec 12, 2023
  removed dependency rgd-pipelines-1.0.5.jar

Nov 17, 2023
  upgraded to java 17

Jul 24, 2023
  rat: reduced nr of assemblies processed to rn7 and rat-cyto, to reduce possibility of removing transcript for older assemblies

May 22, 2023
  in '-all_genes' mode download all genes into date-stamped file

May 18, 2023
  added bonobo assembly NHGRI_mPanPan1-v1.1-0.1.freeze_pri

Apr 14, 2023
  updated build.gradle to be gradle 6.x + compatible

Oct 17, 2022
   more verbose naming of downloaded files in fullload mode

May 20, 2022
   aliases: strip prefix 'LOW QUALITY PROTEIN:' from incoming aliases
   added loading of human Alternate T2T-CHM13v2.0 assembly

Apr 28, 2022
   tuned up logging

Apr 22, 2022
   added loading of human assembly GRCh38.p14

Apr 07, 2022
   fixed loading of map positions for green monkey genes

Mar 09, 2022
   tuned up logging

Feb 11, 2022
   tuned up logging

Jan 31, 2022
   upgraded to commons-collections4

Jan 25, 2022
   cleanup: removed some test code

Jan 04, 2022
   updated log4j to avoid zero day exploit

Jun 21, 2021
   fixed code to properly process features

Jun 15, 2021
   updated scripts to better handle processed species list

Mar 26, 2021
   -added loading of new squirrel assembly HiC_ltri_2

Mar 11, 2021
   -added support for 5 new dog assemblies

Feb 25, 2021