@@ -33,9 +33,9 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
-    implementation 'org.springframework:spring-jdbc:6.2.4'
-    implementation 'com.io7m.xom:xom:1.2.10'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.8.0.25.04'
+    implementation 'org.springframework:spring-jdbc:6.2.5'
+    implementation 'xom:xom:1.3.9'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
